--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,7 +8,7 @@
 /* Variáveis para responsividade */
 :root {
     --h1-font-size: 5rem;
-    --h2-font-size: 5rem;
+    --h2-font-size: 1.8rem;
     --p-font-size: 1.2rem;
     --logo-width: 500px;
     --cor-sombra: rgba(0, 0, 0, 0.3);
@@ -17,7 +17,7 @@
 @media screen and (max-width: 768px) {
     :root {
         --h1-font-size: 3rem;
-        --h2-font-size: 3rem;
+        --h2-font-size: 1.8rem;
         --p-font-size: 1rem;
         --logo-width: 300px;
     }
@@ -26,7 +26,7 @@
 @media screen and (max-width: 480px) {
     :root {
         --h1-font-size: 2rem;
-        --h2-font-size: 2rem;
+        --h2-font-size: 1.4rem;
         --p-font-size: 0.9rem;
         --logo-width: 250px;
     }
@@ -281,6 +281,7 @@ p {
     border: 1px solid rgba(176, 136, 249, 0.3);
     box-shadow: 0 0 20px rgba(176, 136, 249, 0.2);
     transform-style: preserve-3d;
+    text-align: center;
 }
 
 .expanded-content.active section {
@@ -301,11 +302,12 @@ p {
 
 .expanded-content h2 {
     font-family: 'Cinzel Decorative', cursive;
-    font-size: --h2-font-size;
+    font-size: var(--h2-font-size);
     color: #b088f9;
     margin-bottom: 15px;
     text-shadow: 0 0 10px rgba(176, 136, 249, 0.4);
     transition: text-shadow 0.3s ease;
+    
 }
 
 .expanded-content h2:hover {
